// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateCellSetProperty action Dispatches an action to update property to the reducer when not using a root node 1`] = `
{
  "payload": {
    "cellSetKey": "child",
    "dataUpdated": {
      "name": "Some node!",
    },
  },
  "type": "cellSets/updateProperty",
}
`;

exports[`updateCellSetProperty action Dispatches an action to update property to the reducer when using a root node 1`] = `
{
  "payload": {
    "cellSetKey": "root",
    "dataUpdated": {
      "name": "Some node!",
    },
  },
  "type": "cellSets/updateProperty",
}
`;

exports[`updateCellSetProperty action Sends fetch to the API when a cell set's property is updated 1`] = `
{
  "body": "[{"$match":{"query":"$[?(@.key == \\"root\\")]","value":{"children":[{"$match":{"query":"$[?(@.key == \\"child\\")]","value":{"name":"Some node!"}}}]}}}]",
  "headers": {
    "Content-Type": "application/boschni-json-merger+json",
  },
  "method": "PATCH",
}
`;
